--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+#datasource
+spring.datasource.url=jdbc:mariadb://localhost:3306/
+spring.datasource.username=rootester
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.non_contextual_creation=true
+
+#SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
