--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
 #datasource
-spring.datasource.url=jdbc:mariadb://localhost:3306/
+spring.datasource.url=jdbc:mariadb://localhost:3306/libraryapi
 spring.datasource.username=rootester
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
